--- a/class_ex_3.ipynb
+++ b/class_ex_3.ipynb
@@ -671,29 +671,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-30-5b6905bb04f5>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-5b6905bb04f5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'mean of potential is',71.02)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean of age is 25.24\n",
+      "mean of potential is 71.02\n"
      ]
     }
    ],
    "source": [
-    "print('mean of age is',25.24, end=''\n",
-    "      'mean of potential is',71.02)"
+    "print('mean of age is',25.24)\n",
+    "print('mean of potential is',71.02)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest potential is 95\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Highest potential is', 95)"
+   ]
   }
  ],
  "metadata": {
